# escriba

./: .gitignore  CLAUDE.md  Cargo.toml  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: absorption-survey.md
escriba/: Cargo.toml
escriba-api/: Cargo.toml
escriba-api/src/: lib.rs
escriba-buffer/: Cargo.toml
escriba-buffer/src/: buffer.rs  encoding.rs  error.rs  lib.rs  line_ending.rs  undo.rs
escriba-command/: Cargo.toml
escriba-command/src/: lib.rs
escriba-config/: Cargo.toml
escriba-config/src/: lib.rs
escriba-core/: Cargo.toml
escriba-core/src/: action.rs  edit.rs  id.rs  lib.rs  mode.rs  motion.rs  position.rs  range.rs  selection.rs
escriba-input/: Cargo.toml
escriba-input/src/: lib.rs
escriba-keymap/: Cargo.toml
escriba-keymap/src/: lib.rs
escriba-lisp/: Cargo.toml
escriba-lisp/src/: abbrev.rs  apply.rs  attest.rs  bufferline.rs  cmd.rs  dap.rs  effect.rs  filetype.rs  fold.rs  formatter.rs  gate.rs  hash.rs  highlight.rs  hook.rs  icon.rs  keybind.rs  kmacro.rs  lib.rs  lsp.rs  mark.rs  mcp.rs  mode.rs  mode_spec.rs  option.rs  palette.rs  plugin.rs  ruler.rs  schedule.rs  session.rs  snippet.rs  statusline.rs  strutil.rs  task.rs  term.rs  textobject.rs  theme.rs  workflow.rs
escriba-lsp-client/: Cargo.toml
escriba-lsp-client/src/: lib.rs
escriba-mcp/: Cargo.toml
escriba-mcp/src/: lib.rs  main.rs
escriba-mode/: Cargo.toml
escriba-mode/src/: lib.rs
escriba-plugin/: Cargo.toml
escriba-plugin/src/: lib.rs
escriba-render/: Cargo.toml
escriba-render/src/: gpu.rs  lib.rs
escriba-runtime/: Cargo.toml
escriba-runtime/src/: lib.rs
escriba-spec/: Cargo.toml
escriba-spec/src/: lib.rs
escriba-ts/: Cargo.toml
escriba-ts/src/: lib.rs
escriba-tui/: Cargo.toml
escriba-tui/src/: keys.rs  lib.rs  render.rs  run.rs
escriba-ui/: Cargo.toml
escriba-ui/src/: lib.rs
escriba-vm/: Cargo.toml
escriba-vm/src/: lib.rs
escriba/configs/: blnvim-defaults.lisp
escriba/examples/: sample-rc.lisp
escriba/src/: lib.rs  main.rs
escriba/tests/: rc_integration.rs
module/: default.nix
