[workspace]
resolver = "2"
members = [
    "escriba-core",
    "escriba-buffer",
    "escriba-config",
    "escriba-mode",
    "escriba-keymap",
    "escriba-command",
    "escriba-api",
    "escriba-spec",
    "escriba-ui",
    "escriba-render",
    "escriba-plugin",
    "escriba-vm",
    "escriba-input",
    "escriba-runtime",
    "escriba-ts",
    "escriba-lsp-client",
    "escriba-mcp",
    "escriba",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
repository = "https://github.com/pleme-io/escriba"
authors = ["pleme-io"]

[workspace.dependencies]
# Workspace-internal — path deps.
escriba-core    = { path = "escriba-core",    version = "0.1.0" }
escriba-buffer  = { path = "escriba-buffer",  version = "0.1.0" }
escriba-config  = { path = "escriba-config",  version = "0.1.0" }
escriba-mode    = { path = "escriba-mode",    version = "0.1.0" }
escriba-keymap  = { path = "escriba-keymap",  version = "0.1.0" }
escriba-command = { path = "escriba-command", version = "0.1.0" }
escriba-api     = { path = "escriba-api",     version = "0.1.0" }
escriba-spec    = { path = "escriba-spec",    version = "0.1.0" }
escriba-ui      = { path = "escriba-ui",      version = "0.1.0" }
escriba-render  = { path = "escriba-render",  version = "0.1.0" }
escriba-plugin  = { path = "escriba-plugin",  version = "0.1.0" }
escriba-vm      = { path = "escriba-vm",      version = "0.1.0" }
escriba-input   = { path = "escriba-input",   version = "0.1.0" }
escriba-runtime = { path = "escriba-runtime", version = "0.1.0" }
escriba-ts      = { path = "escriba-ts",      version = "0.1.0" }
escriba-lsp-client = { path = "escriba-lsp-client", version = "0.1.0" }
escriba-mcp     = { path = "escriba-mcp",     version = "0.1.0" }

# Third-party.
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
serde_yaml       = "0.9"
thiserror        = "2"
anyhow           = "1"
clap             = { version = "4", features = ["derive", "env"] }
ropey            = "1"
schemars         = { version = "0.8", features = ["chrono"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio            = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync", "fs"] }
tower-lsp        = "0.20"
async-trait      = "0.1"

# pleme-io sibling path deps — match sui-eval / caixa convention.
tatara-lisp        = { path = "../tatara/tatara-lisp" }
tatara-lisp-derive = { path = "../tatara/tatara-lisp-derive" }
garasu             = { path = "../garasu" }
madori             = { path = "../madori" }
awase              = { path = "../awase" }
hayai              = { path = "../hayai" }
irodori            = { path = "../irodori" }
mojiban            = { path = "../mojiban" }
shikumi            = { path = "../shikumi" }

# Testing.
pretty_assertions = "1"
tempfile          = "3"
proptest          = "1"

[workspace.lints.clippy]
pedantic              = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc    = "allow"
missing_panics_doc    = "allow"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "z"
strip         = true
