[package]
name = "escriba-buffer"
description = "Rope-backed text buffer for escriba — ropey + undo tree + encoding + line-ending + structural Lisp-aware navigation helpers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
escriba-core = { workspace = true }
ropey        = { workspace = true }
serde        = { workspace = true }
schemars     = { workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest          = { workspace = true }
tempfile          = { workspace = true }

[lints]
workspace = true
