[package]
name = "escriba-keymap"
description = "Keybinding tree + dispatch for escriba — mode-aware, chord-capable, major-mode-overridable. Built on awase key parsing."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
escriba-core = { workspace = true }
escriba-mode = { workspace = true }
serde        = { workspace = true }
schemars     = { workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
