[package]
name = "escriba-mode"
description = "Modal state machine for escriba — Normal/Insert/Visual/VisualLine/Command + pending-operator + pending-count state."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
escriba-core = { workspace = true }
serde        = { workspace = true }
schemars     = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
