[package]
name = "escriba-plugin"
description = "Plugin manifest + discovery for escriba — every plugin is a caixa with :kind Plugin. Phase 1 scaffold; full VM wiring in phase 2."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
escriba-core       = { workspace = true }
escriba-config     = { workspace = true }
tatara-lisp        = { workspace = true }
tatara-lisp-derive = { workspace = true }
serde              = { workspace = true }
schemars           = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
