[package]
name = "escriba"
description = "The escriba editor binary. Composes every escriba-* crate via madori's app loop + garasu's GPU stack."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "escriba"
path = "src/main.rs"

# GPU-default sibling binary. Same code, same CLI; only difference
# is `$ESCRIBA_RENDER=gpu` is pre-set. Users who want the GPU window
# by default wire `escriba-gpu`; nvim-style terminal users stay on
# plain `escriba`.
[[bin]]
name = "escriba-gpu"
path = "src/bin/escriba-gpu.rs"

[dependencies]
escriba-core    = { workspace = true }
escriba-buffer  = { workspace = true }
escriba-config  = { workspace = true }
escriba-mode    = { workspace = true }
escriba-keymap  = { workspace = true }
escriba-command = { workspace = true }
escriba-ui      = { workspace = true }
escriba-render  = { workspace = true }
escriba-runtime = { workspace = true }
escriba-input   = { workspace = true }
escriba-tui     = { workspace = true }
escriba-plugin  = { workspace = true }
escriba-vm      = { workspace = true }
escriba-spec    = { workspace = true }
escriba-lisp    = { workspace = true }
escriba-ts      = { workspace = true }
madori          = { workspace = true }
garasu          = { workspace = true }
clap            = { workspace = true }
anyhow          = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
